Added cards and formed basic layout.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Browser Game</title>
+    <title>Texas Hold'em</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Web Game</h1>
-
-
+    <img id="background" src="./assets/felt_table.jpg" alt="background">
+    <h1>Texas Hold'em</h1>
+    <div id="computerHand">
+        <img class="cards" id="computerCard1" src="./assets/cards/face_down.jpg" alt="card">
+        <img class="cards" id="computerCard2" src="./assets/cards/face_down.jpg" alt="card">
+    </div>
+    <div id="communityCards">
+        <img class="cards" id="communityCard1" src="./assets/cards/face_down.jpg" alt="card">
+        <img class="cards" id="communityCard2" src="./assets/cards/face_down.jpg" alt="card">
+        <img class="cards" id="communityCard3" src="./assets/cards/face_down.jpg" alt="card">
+        <img class="cards" id="communityCard4" src="./assets/cards/face_down.jpg" alt="card">
+        <img class="cards" id="communityCard5" src="./assets/cards/face_down.jpg" alt="card">
+    </div>
+    <div id="playerHand">
+        <img class="cards" id="playerCard1" src="./assets/cards/face_down.jpg" alt="card">
+        <img class="cards" id="playerCard1" src="./assets/cards/face_down.jpg" alt="card">
+    </div>
 
 
 
