Created deck and shuffle function.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
         <img class="cards" id="playerCard1" src="./assets/cards/face_down.jpg" alt="card">
     </div>
 
+    <button id="dealbtn">Deal</button>  
 
 
-    <script href="main.js"></script>
+
+    <script src="./main.js" type="module"></script>
+    <script src="./deck.js"></script>
 </body>
 </html>
