Added buttons for each stage of hand.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <img id="background" src="./assets/felt_table.jpg" alt="background">
     <h1>Texas Hold'em</h1>
-    <div id="computerHand">
-        <img class="cards" id="computerCard1" src="./assets/cards/face_down.jpg" alt="card">
-        <img class="cards" id="computerCard2" src="./assets/cards/face_down.jpg" alt="card">
+    <div id="dealerHand">
+        <img class="cards" id="dealerCard1" src="./assets/cards/face_down.jpg" alt="card">
+        <img class="cards" id="dealerCard2" src="./assets/cards/face_down.jpg" alt="card">
     </div>
     <div id="communityCards">
         <img class="cards" id="communityCard1" src="./assets/cards/face_down.jpg" alt="card">
@@ -26,7 +26,12 @@
         <img class="cards" id="playerCard2" src="./assets/cards/face_down.jpg" alt="card">
     </div>
 
-    <button id="dealbtn">Deal</button>  
+    <button id="dealbtn">Deal</button> 
+    <button id="flopbtn">Flop</button> 
+    <button id="turnbtn">Turn</button> 
+    <button id="riverbtn">River</button>
+    <button id="finalbtn">Finish</button>
+     
 
 
 
