Something to turn in, still working on it.

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- <img id="background" src="./assets/vecteezy.jpg" alt="background"> -->
-    <div id="container">
-        <!-- <img id="pokerTable" src="./assets/table.png" alt="table"> -->
+   <div id="container">
         <h1>Texas Hold'em</h1>
         <div id="table">
             <div id="dealerHand" class="cardSet">
@@ -41,16 +39,17 @@
             <button id="betbtn">Bet</button>
         </div> -->
     </div>
+    <div id="scoreboard">
+        <h2>Scoreboard</h2>
+        <!-- <h2>Player Hands Won:</h2>
+        <h2>Dealer Hands Won:</h2> -->
+    </div>
     <div id="links">
         <a href="https://www.vecteezy.com">Vecteezy</a>   
     </div>
     
-   
-  
     <script src="./deck.js"></script>
     <script src="./evaluate.js"></script>
     <script src="./main.js"></script>
-    
-   
     </body>
 </html>
