Fixed updating scoreboard, cleaned up code.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <div id="container">
+    <!-- <div id="background">
+        <img id="backgroundImage" src="./assets/vecteezy.jpg" alt="Background">
+    </div> -->
+    <div id="container">
         <h1>Texas Hold'em</h1>
         <div id="table">
             <div id="dealerHand" class="cardSet">
@@ -40,9 +43,8 @@
         </div> -->
     </div>
     <div id="scoreboard">
-        <h2>Scoreboard</h2>
-        <!-- <h2>Player Hands Won:</h2>
-        <h2>Dealer Hands Won:</h2> -->
+        <h2 id="playerScoreBoard">Player Hands Won:</h2>
+        <h2 id="dealerScoreBoard">Dealer Hands Won:</h2>
     </div>
     <div id="links">
         <a href="https://www.vecteezy.com">Vecteezy</a>   
