Started converting to scss styling

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Texas Hold'em</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/css/main.css">
 </head>
 <body>
     <!-- <div id="background">
@@ -41,15 +41,17 @@
         <!-- <div id="betting">
             <button id="betbtn">Bet</button>
         </div> -->
+        <div id="scoreboard">
+            <h2 id="playerScoreBoard">Player Hands Won:</h2>
+            <h2 id="dealerScoreBoard">Dealer Hands Won:</h2>
+        </div>
+        <div id="links">
+            <a href="https://www.vecteezy.com">Vecteezy</a>   
+        </div>
+        <footer>
+            <a>Copyright @2022 Thomas Crowe</a>
+        </footer>
     </div>
-    <div id="scoreboard">
-        <h2 id="playerScoreBoard">Player Hands Won:</h2>
-        <h2 id="dealerScoreBoard">Dealer Hands Won:</h2>
-    </div>
-    <div id="links">
-        <a href="https://www.vecteezy.com">Vecteezy</a>   
-    </div>
-    
     <script src="./deck.js"></script>
     <script src="./evaluate.js"></script>
     <script src="./main.js"></script>
