Added chip image

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
                 <img class="cards" id="playerCard1" src="./assets/cards/face_down.jpg" alt="card">
                 <img class="cards" id="playerCard2" src="./assets/cards/face_down.jpg" alt="card">
             </div>
+            <!-- <img src="./assets/chip.png" alt="chip" id="chip"> -->
         </div>
         <div id="buttons">
             <button id="dealbtn">Deal</button> 
