Cleaning up scss

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     </div> -->
     <div id="container">
         <h1>Texas Hold'em</h1>
+        <div id="message">
+            <p id="messageText"></p>
+        </div>
         <div id="table">
             <div id="dealerHand" class="cardSet">
                 <img class="cards" id="dealerCard1" src="./assets/cards/face_down.jpg" alt="card">
